# pyspeed-web-container

./: .env  CMakeLists.txt  CPP_ERRORS_ANALYSIS.md  CPP_ERROR_FIXES.md  DOCKER_DEPLOYMENT.md  Dockerfile  FINAL_RESULTS.md  Makefile  PROJECT_SUMMARY.md  README.md  REAL_WORLD_TESTING.md  TEST_RESULTS.md  check_dependencies.sh  deploy.sh  docker-compose.yml  performance_analysis.py  real_performance_test.py  requirements.txt  setup.py  test_performance.py
docker/: nginx.conf
src/cpp/: compatibility.hpp  http_server.cpp  http_server.hpp  json_accelerator.cpp  json_accelerator.hpp  python_bridge.cpp  python_bridge_old.cpp  request_parser.cpp  request_parser.hpp  simple_json_accelerator.cpp  static_handler.cpp  static_handler.hpp
src/python/examples/: demo.py
src/python/examples/fastapi_app/: app.py  pyspeed_app.py
src/python/examples/flask_app/: app.py  pyspeed_app.py
src/python/pyspeed/: __init__.py  benchmarks.py  container.py  web_benchmarks.py
